Pankaj | Fixed -- no data text was not showing in allDetails page in i-pad for disease template

--- a/ui/app/styles/clinical/_treatment.scss
+++ b/ui/app/styles/clinical/_treatment.scss
@@ -90,8 +90,8 @@
                 padding: 6px 10px 7px;
             }
             .drug-name,textarea.drug-order-notes{
-                min-width: 335px;
-                width: 335px;
+                min-width: 330px;
+                width: 330px;
                 margin-right: 10px;
                 float: left;
                 @media screen and (max-width: 1024px) {
